# cookiecutter_templates

./: AGENTS.md  CLAUDE.md  README.md  justfile
fastapi/: cookiecutter.json
fastapi/fastapi-uv-structlog-cookiecutter-otel-docker/{{ cookiecutter.project_slug }}/: Dockerfile  Makefile  pyproject.toml
fastapi/fastapi-uv-structlog-cookiecutter-otel-docker/{{ cookiecutter.project_slug }}/tests/: test_health.py
fastapi/fastapi-uv-structlog-cookiecutter-otel-docker/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/api/routes/: types.py  users.py
fastapi/fastapi-uv-structlog-cookiecutter-otel-docker/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/core/: config.py  logging.py  otel.py
fastapi/fastapi-uv-structlog-cookiecutter-otel-docker/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/db/: init_db.py  session.py
fastapi/{{ cookiecutter.project_slug }}/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile
fastapi/{{ cookiecutter.project_slug }}/docker/: otel-collector-config.yaml
fastapi/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __init__.py  main.py
fastapi/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/api/: __init__.py
fastapi/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/core/: __init__.py  logging.py  otel.py
fastapi/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/db/: __init__.py  init_db.py  session.py
fastapi/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/security/: __init__.py  auth.py
prefect_flow/: cookiecutter.json
prefect_flow/{{ cookiecutter.project_slug }}/: .gitignore  README.md  justfile  main.py  prefect.yaml  pyproject.toml
prefect_flow/{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/flows/: __init__.py  {{ cookiecutter.flow_module_name }}.py
(+4 files in other folders)
