[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
dependencies = [
  "prefect==3.6.25",
  "prefect-kubernetes>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "basedpyright>=1.37.1",
  "ruff>=0.14.11",
]

[tool.ruff]
line-length = 100

[tool.basedpyright]
typeCheckingMode = "standard"
